# Vulkan-Robot

./: CMakeLists.txt  README.md
Headers/: Structs.h  first_app.hpp  lve_buffer.hpp  lve_computepipeline.hpp  lve_descriptors.hpp  lve_device.hpp  lve_model.hpp  lve_pipeline.hpp  lve_renderer.hpp  lve_swap_chain.hpp  lve_texture.hpp  lve_transform.hpp  lve_window.hpp
Pictures/: container.mtl  leg.mtl  robot.mtl
Shaders/: bckg.frag  bckg.vert  bckg_vert.spv  cabin.frag  cabin.vert  cabin_frag.spv  cabin_vert.spv  cont.frag  cont.vert  container_frag.spv  container_vert.spv  legLeft_vert.spv  legRight_vert.spv  legleft.vert  legright.vert  pula.comp  pula.frag  pula.vert  pula_comp.spv  pula_frag.spv  pula_vert.spv  robot_frag.spv  robot_vert.spv
Shaders/bckp/: jup_frag.spv  jup_vert.spv  pula.frag  pula.vert
Source_Files/: first_app.cpp  lve_buffer.cpp  lve_computepipeline.cpp  lve_descriptors.cpp  lve_device.cpp  lve_model.cpp  lve_pipeline.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_texture.cpp  lve_transform.cpp  lve_window.cpp  main.cpp
